# vibesys

./: .env.example  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  agent.toml.example  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vs
.codex/final-one-h100-measurement/: constrained_robust_tokens_benchmark.py  high_robust_tokens_benchmark.py  long_robust_tokens_benchmark.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-engineering-change.yml  03-expansion-work.yml  04-experiment.yml
.github/workflows/: test.yml
clients/tui/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: cli-flags.md  coding-best-practices.md  extending-profilers.md  issue-authoring.md  omnigent-evaluation.md  openevolve.md  skill-metadata.md  vllm-h100-workload-tuning.md
examples/Llama-3-8B/: benchmark.py
examples/Llama-3-8B-trn2/: OBJECTIVE.md  README.md  accuracy_check.py  benchmark.py  requirements.txt
examples/Llama-3.1-8B-Instruct-MLX-8bit/: OBJECTIVE.md
examples/data-structures/queue-batch/: OBJECTIVE.md  README.md  pyproject.toml
examples/data-structures/queue-batch/accuracy_checker/: checker.py
examples/data-structures/queue-batch/benchmark/: benchmark.py
examples/data-structures/queue-batch/reference/: reference.py
examples/data-structures/queue-lossy/: OBJECTIVE.md  README.md  pyproject.toml
examples/data-structures/queue-lossy/accuracy_checker/: checker.py
examples/data-structures/queue-lossy/benchmark/: benchmark.py
examples/data-structures/queue-mpsc/: .gitignore  OBJECTIVE.md  README.md  pyproject.toml  vibeserve.input.toml
examples/data-structures/queue-mpsc/accuracy_checker/: checker.py
examples/data-structures/queue-mpsc/benchmark/: benchmark.py
examples/data-structures/queue-mpsc/reference/: reference.py
examples/data-structures/queue-spsc/: Cargo.toml  OBJECTIVE.md  README.md  pyproject.toml  vibeserve.input.toml
examples/data-structures/queue-spsc/accuracy_checker/: checker.py
examples/data-structures/queue-spsc/benchmark/: benchmark.py
examples/hotel-reservation-place/: OBJECTIVE.md  README.md
examples/kv-default/: OBJECTIVE.md  README.md
examples/kv-store/: CANDIDATE_CONTRACT.md  OBJECTIVE.md  README.md  kv-store.md  run.sh  run_test.sh  vibeserve.input.toml  vibesys.input.toml
examples/libs/queue-harness/: pyproject.toml
examples/libs/queue-harness/src/queue_harness/: __init__.py  benchmark.py  checker.py
examples/libs/queue-input-core/: DESIGN.md  QUEUE_ABI.md  QUEUE_PROTOCOL.md  pyproject.toml
examples/libs/queue-input-core/include/: vibeserve_queue_protocol.h
examples/libs/queue-input-core/src/queue_input_core/: __init__.py  benchmark.py  candidate.py  checker.py  config.py  contract.py  reference.py  trace.py  trusted.py
examples/libs/queue-input-core/src/queue_input_core/trusted_harness/: benchmark.go  benchmark_test.go  candidate.go  checker.go  checker_test.go  go.mod  main.go  main_test.go  protocol.go  protocol_test.go  runner.go
examples/libs/queue-input-core/src/queue_input_core/trusted_harness/native_runner/: Cargo.toml
examples/libs/queue-input-core/src/queue_input_core/trusted_harness/native_runner/src/: abi.rs  benchmark.rs  main.rs
examples/libs/queue-input-core/src/queue_input_core/trusted_harness/testdata/: reference_candidate.c
examples/social-network-read-timeline/: CMakeLists.txt
examples/social-network-read-timeline/accuracy_checker/: checker.cpp
examples/starters/qwen3-coder-vllm-modal/: .gitignore  main.py  pyproject.toml  vllm_source_overlay.txt
examples/starters/qwen3-coder-vllm-modal/tests/: test_main_contract.py
examples/starters/vllm-h100/: CANDIDATE.md  modal_app.py  pyproject.toml  serve.py
examples/starters/vllm-h100/scripts/: install_local_vllm.sh
examples/starters/vllm-h100/tests/: test_starter_contract.py
inputs/: __init__.py
libs/: __init__.py
libs/vs-feature-flags/: README.md  pyproject.toml
libs/vs-feature-flags/src/vs_feature_flags/: __init__.py  config.py  core.py
libs/vs-feature-flags/tests/: test_core.py  test_feature_flag_config.py
libs/vs-github/: README.md  pyproject.toml
libs/vs-github/src/vs_github/: __init__.py  cli.py
libs/vs-github/tests/: test_cli.py
libs/vs-issue-board/: README.md  pyproject.toml
libs/vs-issue-board/src/vs_issue_board/: __init__.py  core.py  format.py  mcp.py  policy.py
libs/vs-issue-board/tests/: test_issue_board_core.py  test_mcp.py  test_policy_and_format.py
libs/vs-sandbox/: README.md  pyproject.toml
libs/vs-sandbox/src/vs_sandbox/: __init__.py  docker_sandbox.py  host_resource_importer.py  host_resources.py  host_sandbox.py  modal_model_setup.py  modal_sandbox.py
libs/vs-sandbox/tests/: test_docker_sandbox.py  test_host_resource_importer.py  test_host_resources.py  test_modal_model_setup.py  test_modal_sandbox.py
nginx_patches/: nginx_check_api_blocks.conf
reference/: meta.json
resources/: README.md
scripts/: check_format.sh  check_lint.sh  check_types.sh  format.sh
tests/: conftest.py  test_agent_cli_mcp.py  test_agent_progress.py  test_agent_runners.py  test_backend_fragments.py  test_callbacks.py  test_cli.py  test_cli_dispatcher.py  test_config.py  test_context.py  test_device_lease.py  test_docker_sandbox.py  test_domain_runtime.py  test_environment_hooks.py  test_evolutionary_loop.py  test_evolutionary_population.py  test_experiment_repo.py  test_features.py  test_git_snapshot_resilience.py  test_git_tracker.py  test_gpu_monitor.py  test_helpers.py  test_host_resources.py  test_input_project.py  test_issue_board.py  test_issue_mcp_config.py  test_issue_mcp_server.py  test_issue_render.py  test_issue_tool_impl.py  test_issue_tools.py  test_kv_store_bundle.py  test_launcher.py  test_linux_cpu_profiler.py  test_llama_mlx_8bit_bundle.py  test_llm_client.py  test_logger.py  test_macos_cpu_profiler.py  test_main.py  test_metal_backend.py  test_microservice_inputs.py  (+21 more)
vibeserve_agent/: __init__.py  agent_runner.py  cli.py  config.py  constants.py  context.py  llm_client.py  prompts.py  schemas.py
(+1221 files in other folders)
