[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-serve"
version = "0.1.0"
description = "AI agent system for generating bespoke LLM serving systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentshim>=0.5.0",
    "deepagents",
    "jinja2>=3.1",
    "langchain-google-vertexai>=3.2.2",
    "langchain-openai",
    "huggingface_hub",
    "openai>=1.28.0",
    "pydantic>=2",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "mcp>=1.0",
    "datasets>=4.8.4",
    "soundfile>=0.13.1",
    "librosa>=0.11.0",
    "modal>=1.4.2",
    "vs-feature-flags",
    "vs-issue-board",
]

[project.scripts]
vibe-serve = "vibe_serve.cli:main"
vibe-serve-issue-mcp = "vs_issue_board.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vibe_serve*"]

[tool.setuptools.package-data]
vibe_serve = ["templates/*.j2", "templates/_backend/*/*.j2", "loops/agent/templates/*.j2", "loops/agent/templates/_domain/*.md", "loops/agent/templates/_modality/*/*.j2", "loops/evolve/templates/*.j2", "loops/plain/templates/*.j2", "loops/plain/templates/*/*.j2"]

[dependency-groups]
dev = [
    "chardet<6",
    "diff-cover",
    "matplotlib>=3.10.8",
    "pytest",
    "pytest-cov",
    "ruff>=0.6",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests", "libs/vs-feature-flags/tests", "libs/vs-issue-board/tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "libs/vs-feature-flags/src", "libs/vs-feature-flags/tests", "libs/vs-issue-board/src", "libs/vs-issue-board/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.uv]
package = true

[tool.uv.workspace]
exclude = ["exp_env"]
members = ["libs/*"]

[tool.uv.sources]
agentshim = { git = "https://github.com/vic-lsh/agentshim.git", rev = "codex/executor-injection" }
vs-feature-flags = { workspace = true }
vs-issue-board = { workspace = true }
