[project]
name = "queue-batch-input"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["queue-harness"]

[tool.uv]
package = false

[tool.uv.sources]
queue-harness = { path = "../../libs/queue-harness", editable = true }

[tool.vibeserve.queue]
scenario = "batch"
capacity = 1024
producers = 1
consumers = 1
