[project]
name = "queue-mpsc-input"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["queue-input-core"]

[tool.uv]
package = false

[tool.uv.sources]
queue-input-core = { path = "../../libs/queue-input-core", editable = true }

[tool.vibeserve.queue]
scenario = "mpsc"
capacity = 1024
producers = 4
consumers = 1
