[project]
name = "vllm-h100-candidate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "vllm==0.10.0",
  "transformers==4.53.2",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jsonschema>=4.0",
  "modal>=1.5.2",
  "pydantic>=2.0",
  "pytest>=8.0",
  "tomli>=2.0; python_version < '3.11'",
  "uvicorn>=0.30",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [".venv", "vllm"]
